starting work on creating differntiable model for scan distortion

--- a/v3/point_cloud_rectification/test_gazebo_data.ipynb
+++ b/v3/point_cloud_rectification/test_gazebo_data.ipynb
@@ -18,17 +18,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-03-29 21:23:16.971424: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "2023-04-06 14:18:51.741762: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2023-03-29 21:23:17.085795: E tensorflow/stream_executor/cuda/cuda_blas.cc:2981] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2023-03-29 21:23:17.527688: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /home/derm/anaconda3/envs/py39/lib/python3.9/site-packages/cv2/../../lib64:\n",
-      "2023-03-29 21:23:17.527747: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /home/derm/anaconda3/envs/py39/lib/python3.9/site-packages/cv2/../../lib64:\n",
-      "2023-03-29 21:23:17.527753: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n",
-      "2023-03-29 21:23:18.110069: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-03-29 21:23:18.133669: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-03-29 21:23:18.133839: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-03-29 21:23:18.253686: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+      "2023-04-06 14:18:51.843481: E tensorflow/stream_executor/cuda/cuda_blas.cc:2981] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2023-04-06 14:18:52.262435: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /home/derm/anaconda3/envs/py39/lib/python3.9/site-packages/cv2/../../lib64:\n",
+      "2023-04-06 14:18:52.262490: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /home/derm/anaconda3/envs/py39/lib/python3.9/site-packages/cv2/../../lib64:\n",
+      "2023-04-06 14:18:52.262495: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n",
+      "2023-04-06 14:18:52.746223: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-04-06 14:18:52.771289: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-04-06 14:18:52.771453: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n"
      ]
     },
     {
@@ -42,13 +40,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-03-29 21:23:18.254418: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-03-29 21:23:18.254632: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-03-29 21:23:18.254772: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-03-29 21:23:18.622059: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-03-29 21:23:18.622236: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-03-29 21:23:18.622363: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-03-29 21:23:18.622459: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1616] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 4096 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 3090, pci bus id: 0000:07:00.0, compute capability: 8.6\n"
+      "2023-04-06 14:18:52.890561: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2023-04-06 14:18:52.891336: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-04-06 14:18:52.891510: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-04-06 14:18:52.891636: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-04-06 14:18:53.264030: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-04-06 14:18:53.264206: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-04-06 14:18:53.264335: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-04-06 14:18:53.264431: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1616] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 4096 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 3090, pci bus id: 0000:07:00.0, compute capability: 8.6\n"
      ]
     },
     {
@@ -119,9 +119,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5e371db8",
+   "metadata": {},
+   "source": [
+    "# Motion distortion in simple box scene"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 49,
-   "id": "3feb6c80",
+   "execution_count": 43,
+   "id": "90da0afe",
    "metadata": {},
    "outputs": [
     {
@@ -131,19 +139,19 @@
       "\n",
       " estimated solution vector X: \n",
       " tf.Tensor(\n",
-      "[ 4.4041011e-01  6.3043315e-04 -6.7364461e-05  1.4632772e-06\n",
-      " -3.5449309e-06  9.8923912e-05], shape=(6,), dtype=float32)\n",
+      "[-3.0219796e-01  7.2074328e-03 -9.8601457e-05 -2.4577948e-05\n",
+      " -9.0988804e-05  7.9629105e-03], shape=(6,), dtype=float32)\n",
       "\n",
       " predicted standard deviations of error: \n",
       " tf.Tensor(\n",
-      "[2.9832221e-04 1.6251451e-04 4.4438046e-05 1.0089360e-05 8.4639896e-06\n",
-      " 1.8995632e-05], shape=(6,), dtype=float32)\n"
+      "[4.7415291e-04 2.5606368e-04 4.0695322e-05 9.4271800e-06 9.9285307e-06\n",
+      " 4.4235305e-05], shape=(6,), dtype=float32)\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "09ae660b9f3e4ac0a920b279908986ca",
+       "model_id": "6a3567d8247447b99cbc4d5daf91640f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -156,7 +164,39 @@
     }
    ],
    "source": [
-    "# simple linear motion, 10 mph -- test1\n",
+    "#case2: forward linear motion \n",
+    "# scan1 = np.load(\"sample_data/paper_figures/case2/raw_frame_2.npy\") #static\n",
+    "scan1 = np.load(\"sample_data/paper_figures/case2/raw_frame_3.npy\")\n",
+    "scan2 = np.load(\"sample_data/paper_figures/case2/rectified_linear_frame_3.npy\")\n",
+    "#erase the extra points in 2nd scan that didn't get properly rectified\n",
+    "scan2 = scan2[:-150,:]\n",
+    "\n",
+    "#remove ground plance from both scans\n",
+    "# scan1 = scan1[scan1[:,2] > -1.2]\n",
+    "# scan2 = scan2[scan2[:,2] > -1.2]\n",
+    "\n",
+    "it = ICET(cloud1 = scan1, cloud2 = scan2, fid = 50, niter = 10, \n",
+    "           draw = True, group = 2, RM = False, DNN_filter = False)#, x0 = initial_guess)\n",
+    "print(\"\\n predicted standard deviations of error: \\n\", it.pred_stds)\n",
+    "ViewInteractiveWidget(it.plt.window)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dc415cf7",
+   "metadata": {},
+   "source": [
+    "# Linear motion through simulated urban area"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3feb6c80",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### 10 mph -- test1\n",
     "scan1 = np.load(\"sample_data/test1/rectified_linear_frame_4.npy\")\n",
     "scan2 = np.load(\"sample_data/test1/rectified_linear_frame_5.npy\")\n",
     "\n",
@@ -173,18 +213,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "ebfaaac5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#load ground truth data\n",
     "gt = np.load(\"sample_data/test1/base_vel_7.npy\")\n",
