more notes on constructing correction function

--- a/v3/point_cloud_rectification/linear_correction.ipynb
+++ b/v3/point_cloud_rectification/linear_correction.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "6565d22b",
+   "id": "f7f0934e",
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f8761e1",
+   "id": "bf565a36",
    "metadata": {},
    "source": [
     "# Goal: Estimate acceleration profile $\\hat{m}$ Using Newton-Raphson to compensate for distortion between similar point cloud"
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "079dc9f9",
+   "id": "bb5aeca8",
    "metadata": {},
    "source": [
     "Through the first order Taylor approximation we define: \n",
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 226,
-   "id": "c689e6bf",
+   "id": "c3a38dd4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": 227,
-   "id": "143f6432",
+   "id": "18870e06",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": 228,
-   "id": "a5f887a2",
+   "id": "cc4cace0",
    "metadata": {},
    "outputs": [
     {
@@ -163,16 +163,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9ec0c11",
+   "id": "38285e0d",
    "metadata": {},
    "source": [
-    "# Analytically calculate derivatives with SymPy"
+    "# Test analytically calculating derivatives with SymPy"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 233,
-   "id": "9f0b2f4c",
+   "id": "83436755",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": 264,
-   "id": "54f0caaf",
+   "id": "1d51a3b5",
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": 265,
-   "id": "ba8fb85c",
+   "id": "14093b9c",
    "metadata": {},
    "outputs": [
     {
@@ -248,32 +248,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
-   "id": "90a0f1ed",
+   "execution_count": 274,
+   "id": "c57fa55b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\left[\\begin{matrix}7 x & 4 x^{2} + 2 x\\\\6 x^{2} + 3 x & \\frac{16 x^{3}}{3} + 6 x\\end{matrix}\\right]$"
+       "$\\displaystyle \\left[\\begin{matrix}\\frac{100 x^{3}}{3} + 6 x & 14 x^{2}\\\\21 x^{2} & \\frac{16 x^{3}}{3} + 6 x\\end{matrix}\\right]$"
       ],
       "text/plain": [
-       "⎡               2       ⎤\n",
-       "⎢   7⋅x      4⋅x  + 2⋅x ⎥\n",
-       "⎢                       ⎥\n",
-       "⎢                3      ⎥\n",
-       "⎢   2        16⋅x       ⎥\n",
-       "⎢6⋅x  + 3⋅x  ───── + 6⋅x⎥\n",
-       "⎣              3        ⎦"
+       "⎡     3                   ⎤\n",
+       "⎢100⋅x                2   ⎥\n",
+       "⎢────── + 6⋅x     14⋅x    ⎥\n",
+       "⎢  3                      ⎥\n",
+       "⎢                         ⎥\n",
+       "⎢                  3      ⎥\n",
+       "⎢       2      16⋅x       ⎥\n",
+       "⎢   21⋅x       ───── + 6⋅x⎥\n",
+       "⎣                3        ⎦"
       ]
      },
-     "execution_count": 270,
+     "execution_count": 274,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a = Matrix([[1, 2], \n",
+    "a = Matrix([[10*x, 2], \n",
     "            [3, 4*x]])\n",
     "# A = integrate(a**2)\n",
     "# print(latex(A))\n",
@@ -282,16 +284,180 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 288,
+   "id": "66296238",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}0 & 0\\\\6 x & 0\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "⎡ 0   0⎤\n",
+       "⎢      ⎥\n",
+       "⎣6⋅x  0⎦"
+      ]
+     },
+     "execution_count": 288,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b = Matrix([[x + 1, 2*y],\n",
+    "            [3*x**2*y, 3 + x + y**2]])\n",
+    "diff(b, y, x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c3e01b4c",
+   "metadata": {},
+   "source": [
+    "# Derive Jacobain H"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "82bcad3c",
+   "metadata": {},
+   "source": [
+    "### $\\mathbf{H} \\in \\mathbb{R}^{4N \\times 6} $\n",
+    "\n",
+    "### $\\mathbf{H} = \n",
+    "\\begin{bmatrix}\n",
+    "^{(n)}H_{x} ~ ^{(n)}H_{y} ~ ^{(n)}H_{z} ~ ^{(n)}H_{\\phi} ~ ^{(n)}H_{\\theta} ~ ^{(n)}H_{\\psi}\n",
+    "\\end{bmatrix}$\n",
+    "\n",
+    "### $ ^{(n)}\\mathbf{H}_x =  \\frac{\\delta{\\mathbb{C}}}{\\delta x} ~ ^{(n)}y_j \\in \\mathbb{R}^{4 \\times 1}$\n",
+    "\n",
+    "### Here $^{(n)}y_j$ refers to distribution mean from scan j inside voxel n, denoted in homogenous coordinates\n",
+    "\n",
+    "$[x, y, z] \\rightarrow [x, y, z, 1] $ \n",
+    "\n",
+    "<!-- <span style=\"color:red\"> TODO: figure out if I need to use homogeneous coordinates for $y_j$ </span> -->"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2a4c03c4",
+   "metadata": {},
+   "source": [
+    "# Calculate correction  function $\\mathbb{C}$ "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fa79dccd",
+   "metadata": {},
+   "source": [
+    "## $\\mathbb{C}(y_j, \\hat{m}) = T_{rect} y_{j, \\text{body frame}} $"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 365,
+   "id": "81a7ec10",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "m_hat =  [x  y  z  φ  θ  φ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x, y, z, phi, theta, psi = symbols('x y z phi theta psi')\n",
+    "m_hat = Matrix([x, y, z, phi, theta, phi]).T\n",
+    "print( \"m_hat = \", pretty(m_hat))\n",
+    "\n",
+    "T_roll = Matrix([[1, 0, 0, 0],\n",
+    "                 [0, cos(phi), sin(phi), 0],\n",
+    "                 [0, -sin(phi), cos(phi), 0],\n",
+    "                 [0, 0, 0, 1]])\n",
+    "# print(\"\\n T_roll =\") \n",
+    "# print(pretty(T_roll))\n",
+    "\n",
+    "T_pitch = Matrix([[cos(theta), 0, -sin(theta), 0],\n",
+    "                 [0, 1, 0, 0],\n",
+    "                 [sin(theta), 0, cos(theta), 0],\n",
+    "                 [0, 0, 0, 1]])\n",
+    "# print(\"\\n T_pitch =\") \n",
+    "# print(pretty(T_pitch))\n",
+    "\n",
+    "#Recall we are setting T_yaw to identity here since scan axis-aligned motion is already compensated for\n",
+    "T_yaw = Matrix([[1, 0, 0, 0],\n",
+    "                 [0, 1, 0, 0],\n",
+    "                 [0, 0, 1, 0],\n",
+    "                 [0, 0, 0, 1]])\n",
+    "# print(\"\\n T_yaw =\") \n",
+    "# print(pretty(T_yaw))\n",
+    "\n",
+    "T_trans = Matrix([[1, 0, 0, x],\n",
+    "                 [0, 1, 0, y],\n",
+    "                 [0, 0, 1, z],\n",
+    "                 [0, 0, 0, 1]])\n",
+    "# print(\"\\n T_trans =\") \n",
+    "# print(pretty(T_trans))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 366,
+   "id": "7a4134d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}\\cos{\\left(\\theta \\right)} & 0 & - \\sin{\\left(\\theta \\right)} & x \\cos{\\left(\\theta \\right)} - z \\sin{\\left(\\theta \\right)}\\\\\\sin{\\left(\\phi \\right)} \\sin{\\left(\\theta \\right)} & \\cos{\\left(\\phi \\right)} & \\sin{\\left(\\phi \\right)} \\cos{\\left(\\theta \\right)} & x \\sin{\\left(\\phi \\right)} \\sin{\\left(\\theta \\right)} + y \\cos{\\left(\\phi \\right)} + z \\sin{\\left(\\phi \\right)} \\cos{\\left(\\theta \\right)}\\\\\\sin{\\left(\\theta \\right)} \\cos{\\left(\\phi \\right)} & - \\sin{\\left(\\phi \\right)} & \\cos{\\left(\\phi \\right)} \\cos{\\left(\\theta \\right)} & x \\sin{\\left(\\theta \\right)} \\cos{\\left(\\phi \\right)} - y \\sin{\\left(\\phi \\right)} + z \\cos{\\left(\\phi \\right)} \\cos{\\left(\\theta \\right)}\\\\0 & 0 & 0 & 1\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "⎡   cos(θ)         0        -sin(θ)                 x⋅cos(θ) - z⋅sin(θ)       \n",
+       "⎢                                                                             \n",
+       "⎢sin(φ)⋅sin(θ)  cos(φ)   sin(φ)⋅cos(θ)  x⋅sin(φ)⋅sin(θ) + y⋅cos(φ) + z⋅sin(φ)⋅\n",
+       "⎢                                                                             \n",
+       "⎢sin(θ)⋅cos(φ)  -sin(φ)  cos(φ)⋅cos(θ)  x⋅sin(θ)⋅cos(φ) - y⋅sin(φ) + z⋅cos(φ)⋅\n",
+       "⎢                                                                             \n",
+       "⎣      0           0           0                             1                \n",
+       "\n",
+       "      ⎤\n",
+       "      ⎥\n",
+       "cos(θ)⎥\n",
+       "      ⎥\n",
+       "cos(θ)⎥\n",
+       "      ⎥\n",
+       "      ⎦"
+      ]
+     },
+     "execution_count": 366,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "T_rect = (T_roll * T_pitch * T_yaw * T_trans)\n",
+    "# T_rect = (T_roll * T_pitch * T_yaw * T_trans).inv()\n",
+    "T_rect"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "e4c76cae",
+   "id": "db1262fd",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
-   "cell_type": "markdown",
-   "id": "912a2cd0",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "76d2bab6",
    "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
