--- a/v3/point_cloud_rectification/newer_college_dataset.ipynb
+++ b/v3/point_cloud_rectification/newer_college_dataset.ipynb
@@ -10,17 +10,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "f2e2815d",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-04-19 21:26:46.620104: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2023-04-19 21:26:46.714525: E tensorflow/stream_executor/cuda/cuda_blas.cc:2981] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2023-04-19 21:26:47.095932: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /home/derm/anaconda3/envs/py39/lib/python3.9/site-packages/cv2/../../lib64:\n",
+      "2023-04-19 21:26:47.095980: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /home/derm/anaconda3/envs/py39/lib/python3.9/site-packages/cv2/../../lib64:\n",
+      "2023-04-19 21:26:47.095985: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n",
+      "2023-04-19 21:26:47.500414: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-04-19 21:26:47.525092: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-04-19 21:26:47.525240: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-04-19 21:26:47.641052: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')]\n",
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
+      "[PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-04-19 21:26:47.641741: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-04-19 21:26:47.641909: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-04-19 21:26:47.642030: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-04-19 21:26:47.961843: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-04-19 21:26:47.962016: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-04-19 21:26:47.962141: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-04-19 21:26:47.962234: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1616] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 4096 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 3090, pci bus id: 0000:07:00.0, compute capability: 8.6\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jupyter environment detected. Enabling Open3D WebVisualizer.\n",
+      "[Open3D INFO] WebRTC GUI backend enabled.\n",
+      "[Open3D INFO] WebRTCWindowSystem: HTTP handshake server disabled.\n"
      ]
     },
     {
@@ -93,10 +130,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "df2e8db1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1.58383659e+09  1.82838528e+08 -3.35320000e+00  8.23849000e+00\n",
+      "  1.40965000e-01  4.06383000e-03  3.68173000e-03 -6.05930000e-01\n",
+      "  7.95499000e-01]\n"
+     ]
+    }
+   ],
    "source": [
     "dir_name = \"/media/derm/06EF-127D3/Newer College Dataset/\"\n",
     "experiment_name = \"01_short_experiment-20230331T172433Z-009/01_short_experiment/\"\n",
@@ -119,10 +166,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "7d6d463c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/media/derm/06EF-127D3/Newer College Dataset/01_short_experiment-20230331T172433Z-009/01_short_experiment/raw_format/ouster_zip_files/ouster_scan-007/ouster_scan/cloud_1583836684_980269824.pcd\n",
+      "/media/derm/06EF-127D3/Newer College Dataset/01_short_experiment-20230331T172433Z-009/01_short_experiment/raw_format/ouster_zip_files/ouster_scan-007/ouster_scan/cloud_1583836685_581422848.pcd\n"
+     ]
+    }
+   ],
    "source": [
     "import open3d as o3d\n",
     "from os import listdir\n",
@@ -145,15 +201,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "1b19091f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "iter 0\n",
+      "iter 1\n",
+      "iter 2\n",
+      "iter 3\n",
+      "iter 4\n",
+      "iter 5\n",
+      "iter 6\n",
+      "iter 7\n",
+      "iter 8\n",
+      "iter 9\n",
+      "\n",
+      " estimated solution vector X: \n",
+      " tf.Tensor([-0.29969752 -0.50004196 -0.02042235  0.00156021  0.03226207 -0.07625718], shape=(6,), dtype=float32)\n",
+      "\n",
+      " predicted standard deviations of error: \n",
+      " tf.Tensor(\n",
+      "[5.4695836e-04 7.8065426e-04 1.5411519e-04 2.0521593e-05 2.9540888e-05\n",
+      " 6.0875824e-05], shape=(6,), dtype=float32)\n"
+     ]
+    }
+   ],
    "source": [
     "it = ICET(cloud1 = pc1, cloud2 = pc2, fid = 50, niter = 10, \n",
-    "           draw = True, group = 2, RM = False, DNN_filter = False)#, x0 = initial_guess)\n",
+    "           draw = False, group = 2, RM = False, DNN_filter = False)#, x0 = initial_guess)\n",
     "print(\"\\n predicted standard deviations of error: \\n\", it.pred_stds)\n",
-    "ViewInteractiveWidget(it.plt.window)"
+    "# ViewInteractiveWidget(it.plt.window)"
    ]
   },
   {
