WOW I was able to get newton raphson to optimize distortion correction and alignment in the same H matrix- works really well when correspondences are know a priori

--- a/v3/point_cloud_rectification/linear_correction.ipynb
+++ b/v3/point_cloud_rectification/linear_correction.ipynb
@@ -930,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 48,
    "id": "97ebdff8",
    "metadata": {
     "scrolled": true
@@ -950,7 +950,7 @@
       " (66256, 6)\n",
       "residual (66256,)\n",
       "~~~~ iteration  1 ~~~~~~~~~~~\n",
-      "m_hat =  [ 1.02083183 -0.79963315 -0.085227   -0.02019377 -0.00127342 -0.81239978]\n",
+      "m_hat =  [-0.34599979 -0.45758962  0.00315352 -0.00617179 -0.01010173 -0.39338193]\n",
       "(16564, 3)\n",
       "\n",
       " M \n",
@@ -959,7 +959,8 @@
       " (66256, 6)\n",
       "residual (66256,)\n",
       "~~~~ iteration  2 ~~~~~~~~~~~\n",
-      "m_hat =  [ 1.95341665 -2.36934054  0.05235539  0.00414084 -0.01202144 -0.95473618]\n",
+      "m_hat =  [-6.14197556e-02 -1.13369693e+00  8.08257764e-04 -1.33666610e-03\n",
+      " -1.44597298e-02 -6.04467368e-01]\n",
       "(16564, 3)\n",
       "\n",
       " M \n",
@@ -968,8 +969,7 @@
       " (66256, 6)\n",
       "residual (66256,)\n",
       "~~~~ iteration  3 ~~~~~~~~~~~\n",
-      "m_hat =  [ 3.13188870e+00 -1.99445913e+00  6.59301582e-03  8.13495951e-03\n",
-      " -1.78876485e-03 -9.69184917e-01]\n",
+      "m_hat =  [ 0.47401995 -1.56751019  0.00214054  0.00354425 -0.01434179 -0.71723925]\n",
       "(16564, 3)\n",
       "\n",
       " M \n",
@@ -978,8 +978,7 @@
       " (66256, 6)\n",
       "residual (66256,)\n",
       "~~~~ iteration  4 ~~~~~~~~~~~\n",
-      "m_hat =  [ 3.40124014e+00 -1.28363248e+00 -4.39768227e-04  3.97737008e-03\n",
-      "  2.02237424e-03 -9.75645417e-01]\n",
+      "m_hat =  [ 1.04743105 -1.76772229  0.00636284  0.00652049 -0.01236873 -0.7863862 ]\n",
       "(16564, 3)\n",
       "\n",
       " M \n",
@@ -988,8 +987,7 @@
       " (66256, 6)\n",
       "residual (66256,)\n",
       "~~~~ iteration  5 ~~~~~~~~~~~\n",
-      "m_hat =  [ 3.19750599e+00 -9.35259322e-01  4.21293264e-03  1.09233853e-03\n",
-      "  1.37086890e-03 -9.85344418e-01]\n",
+      "m_hat =  [ 1.55258449 -1.80788905  0.01115946  0.00791072 -0.00993532 -0.83465598]\n",
       "(16564, 3)\n",
       "\n",
       " M \n",
@@ -998,8 +996,7 @@
       " (66256, 6)\n",
       "residual (66256,)\n",
       "~~~~ iteration  6 ~~~~~~~~~~~\n",
-      "m_hat =  [ 2.99741406e+00 -9.15583849e-01  4.83515433e-03  2.83225331e-04\n",
-      "  4.17385596e-04 -9.93878770e-01]\n",
+      "m_hat =  [ 1.95697951 -1.75448492  0.01512691  0.00822906 -0.00763618 -0.87121015]\n",
       "(16564, 3)\n",
       "\n",
       " M \n",
@@ -1008,8 +1005,7 @@
       " (66256, 6)\n",
       "residual (66256,)\n",
       "~~~~ iteration  7 ~~~~~~~~~~~\n",
-      "m_hat =  [ 2.94337434e+00 -9.92252622e-01  2.65083891e-03  1.58184601e-04\n",
-      "  1.17437492e-04 -9.98401258e-01]\n",
+      "m_hat =  [ 2.26309948 -1.65577731  0.01772689  0.0078891  -0.00568549 -0.89997218]\n",
       "(16564, 3)\n",
       "\n",
       " M \n",
@@ -1018,8 +1014,7 @@
       " (66256, 6)\n",
       "residual (66256,)\n",
       "~~~~ iteration  8 ~~~~~~~~~~~\n",
-      "m_hat =  [ 2.97267882e+00 -1.03072287e+00  8.75515825e-04  6.50223992e-05\n",
-      "  7.46844244e-05 -9.99622688e-01]\n",
+      "m_hat =  [ 2.4864527  -1.54288441  0.01893788  0.00718463 -0.00412589 -0.92286175]\n",
       "(16564, 3)\n",
       "\n",
       " M \n",
@@ -1028,8 +1023,7 @@
       " (66256, 6)\n",
       "residual (66256,)\n",
       "~~~~ iteration  9 ~~~~~~~~~~~\n",
-      "m_hat =  [ 3.00369022e+00 -1.02339782e+00  2.50647834e-04 -5.14239071e-06\n",
-      "  2.14024291e-05 -9.99588856e-01]\n",
+      "m_hat =  [ 2.64523578 -1.43379158  0.01898154  0.00631323 -0.00292722 -0.94102909]\n",
       "(16564, 3)\n",
       "\n",
       " M \n",
@@ -1042,12 +1036,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "833b031aada84b7eba102c684003d041",
+       "model_id": "addd4c40d2fb4ee8994d17a44890fc76",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "ViewInteractiveWidget(height=1376, layout=Layout(height='auto', width='100%'), width=2488)"
+       "ViewInteractiveWidget(height=1043, layout=Layout(height='auto', width='100%'), width=1280)"
       ]
      },
      "metadata": {},
@@ -1105,7 +1099,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "228c4a02",
+   "id": "6d876f5d",
    "metadata": {},
    "outputs": [
     {
@@ -1194,7 +1188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 51,
    "id": "1cc01fa9",
    "metadata": {
     "scrolled": true
@@ -1205,81 +1199,209 @@
      "output_type": "stream",
      "text": [
       "~~~~~~~~~~~Iteration  0 ~~~~~~~~~~\n",
-      "took 0.016439199447631836 sec  to apply motion profile\n",
-      "M \n",
+      "took 0.016170501708984375 sec  to apply motion profile\n",
+      "\n",
+      " M \n",
       " (156, 6)\n",
-      "took 0.0020623207092285156 sec to get H\n",
-      "m_hat:  [ 4.89525385e-02 -7.94802308e-02  3.07787181e-04  9.36364086e-06\n",
-      " -1.97570207e-05 -5.73570468e-02]\n",
+      "H_m \n",
+      " (624, 6)\n",
+      "took 0.0020716190338134766 sec to get H\n",
+      "m_hat:  [-0.00623083  0.00392403  0.00251643  0.00025903 -0.00037435 -0.06993782]\n",
       "~~~~~~~~~~~Iteration  1 ~~~~~~~~~~\n",
-      "took 0.014765501022338867 sec  to apply motion profile\n",
-      "M \n",
-      " (158, 6)\n",
-      "took 0.002023935317993164 sec to get H\n",
-      "m_hat:  [ 9.10584927e-02 -1.90190375e-01  4.93722851e-04  1.93047563e-05\n",
-      " -2.08823003e-05 -1.25981241e-01]\n",
-      "~~~~~~~~~~~Iteration  2 ~~~~~~~~~~\n",
-      "took 0.01658797264099121 sec  to apply motion profile\n",
-      "M \n",
+      "took 0.016338825225830078 sec  to apply motion profile\n",
+      "\n",
+      " M \n",
       " (156, 6)\n",
-      "took 0.002040386199951172 sec to get H\n",
-      "m_hat:  [ 1.23940319e-01 -2.85326958e-01  6.67482149e-04  4.79898335e-06\n",
-      " -4.05110841e-05 -2.05190510e-01]\n",
+      "H_m \n",
+      " (624, 6)\n",
+      "took 0.002080202102661133 sec to get H\n",
+      "m_hat:  [-0.01430567  0.01027247  0.00274686  0.00026437 -0.00037376 -0.16817993]\n",
+      "~~~~~~~~~~~Iteration  2 ~~~~~~~~~~\n",
+      "took 0.016764402389526367 sec  to apply motion profile\n",
+      "\n",
+      " M \n",
+      " (156, 6)\n",
+      "H_m \n",
+      " (624, 6)\n",
+      "took 0.0021240711212158203 sec to get H\n",
+      "m_hat:  [-2.82629654e-02  2.23033242e-02  2.97703943e-03  1.42031786e-04\n",
+      " -3.90427216e-04 -3.26151341e-01]\n",
       "~~~~~~~~~~~Iteration  3 ~~~~~~~~~~\n",
-      "took 0.0189359188079834 sec  to apply motion profile\n",
-      "M \n",
-      " (157, 6)\n",
-      "took 0.002030611038208008 sec to get H\n",
-      "m_hat:  [ 1.51092589e-01 -3.62262338e-01  7.93540676e-04 -1.82091007e-05\n",
-      " -4.04027305e-05 -2.85256922e-01]\n",
-      "~~~~~~~~~~~Iteration  4 ~~~~~~~~~~\n",
-      "took 0.014963388442993164 sec  to apply motion profile\n",
-      "M \n",
+      "took 0.01859307289123535 sec  to apply motion profile\n",
+      "\n",
+      " M \n",
       " (165, 6)\n",
-      "took 0.0021059513092041016 sec to get H\n",
-      "m_hat:  [ 1.69842988e-01 -5.34687936e-01  7.47471524e-04 -4.87755387e-05\n",
-      " -3.68549372e-05 -3.72193068e-01]\n",
+      "H_m \n",
+      " (660, 6)\n",
+      "took 0.002176046371459961 sec to get H\n",
+      "m_hat:  [ 1.88219309e-01  2.69761741e-01  2.94111762e-03  5.69966505e-05\n",
+      " -3.83720733e-04 -4.91119981e-01]\n",
+      "~~~~~~~~~~~Iteration  4 ~~~~~~~~~~\n",
+      "took 0.015350103378295898 sec  to apply motion profile\n",
+      "\n",
+      " M \n",
+      " (176, 6)\n",
+      "H_m \n",
+      " (704, 6)\n",
+      "took 0.0021436214447021484 sec to get H\n",
+      "m_hat:  [ 9.10666108e-01 -8.05957258e-01  1.51837268e-03 -4.90094681e-06\n",
+      " -1.69558800e-04 -7.42465019e-01]\n",
       "~~~~~~~~~~~Iteration  5 ~~~~~~~~~~\n",
-      "took 0.015152454376220703 sec  to apply motion profile\n",
-      "M \n",
-      " (170, 6)\n",
-      "took 0.002107858657836914 sec to get H\n",
-      "m_hat:  [ 1.76941112e-01 -6.66838646e-01  7.07665284e-04 -7.49136743e-05\n",
-      " -3.59223704e-05 -4.61164415e-01]\n",
+      "took 0.01500391960144043 sec  to apply motion profile\n",
+      "\n",
+      " M \n",
+      " (204, 6)\n",
+      "H_m \n",
+      " (816, 6)\n",
+      "took 0.00301361083984375 sec to get H\n",
+      "m_hat:  [ 1.32345068e+00 -1.31874275e+00  1.14135607e-03  6.03419976e-05\n",
+      " -1.38930278e-04 -8.38728487e-01]\n",
       "~~~~~~~~~~~Iteration  6 ~~~~~~~~~~\n",
-      "took 0.014742612838745117 sec  to apply motion profile\n",
-      "M \n",
-      " (171, 6)\n",
-      "took 0.0021331310272216797 sec to get H\n",
-      "m_hat:  [ 1.90858901e-01 -7.55441487e-01  7.16393173e-04 -9.16642239e-05\n",
-      " -1.67343751e-05 -5.44970989e-01]\n",
+      "took 0.017375469207763672 sec  to apply motion profile\n",
+      "\n",
+      " M \n",
+      " (208, 6)\n",
+      "H_m \n",
+      " (832, 6)\n",
+      "took 0.002304553985595703 sec to get H\n",
+      "m_hat:  [ 1.90757012e+00 -1.45041919e+00  5.96090686e-04  6.28288763e-05\n",
+      " -5.61716006e-05 -8.71654749e-01]\n",
       "~~~~~~~~~~~Iteration  7 ~~~~~~~~~~\n",
-      "took 0.015063762664794922 sec  to apply motion profile\n",
-      "M \n",
-      " (182, 6)\n",
-      "took 0.0021419525146484375 sec to get H\n",
-      "m_hat:  [ 2.23923728e-01 -8.62375617e-01  6.73379283e-04 -9.76376541e-05\n",
-      "  4.03678132e-06 -6.14657164e-01]\n",
+      "took 0.014371156692504883 sec  to apply motion profile\n",
+      "\n",
+      " M \n",
+      " (218, 6)\n",
+      "H_m \n",
+      " (872, 6)\n",
+      "took 0.004759073257446289 sec to get H\n",
+      "m_hat:  [ 2.24997139e+00 -1.47211635e+00  6.03265362e-05 -1.04401115e-05\n",
+      "  3.58848047e-06 -8.91383231e-01]\n",
       "~~~~~~~~~~~Iteration  8 ~~~~~~~~~~\n",
-      "took 0.014919042587280273 sec  to apply motion profile\n",
-      "M \n",
-      " (192, 6)\n",
-      "took 0.002212047576904297 sec to get H\n",
-      "m_hat:  [ 2.59115964e-01 -9.06255245e-01  7.13946007e-04 -1.07939835e-04\n",
-      "  1.90553837e-05 -6.81253791e-01]\n",
+      "took 0.016041278839111328 sec  to apply motion profile\n",
+      "\n",
+      " M \n",
+      " (233, 6)\n",
+      "H_m \n",
+      " (932, 6)\n",
+      "took 0.0023887157440185547 sec to get H\n",
+      "m_hat:  [ 2.49195194e+00 -1.84629953e+00 -9.76926996e-04 -1.39984564e-04\n",
+      "  1.71553984e-04 -9.31117237e-01]\n",
       "~~~~~~~~~~~Iteration  9 ~~~~~~~~~~\n",
-      "took 0.01628875732421875 sec  to apply motion profile\n",
-      "M \n",
-      " (197, 6)\n",
-      "took 0.0023636817932128906 sec to get H\n",
-      "m_hat:  [ 3.36426526e-01 -9.69336987e-01  6.86301093e-04 -1.05016035e-04\n",
-      "  3.53457144e-05 -7.32222199e-01]\n"
+      "took 0.020919084548950195 sec  to apply motion profile\n",
+      "\n",
+      " M \n",
+      " (234, 6)\n",
+      "H_m \n",
+      " (936, 6)\n",
+      "took 0.0023851394653320312 sec to get H\n",
+      "m_hat:  [ 2.91299248e+00 -1.69075942e+00 -1.39224948e-03 -2.15678927e-04\n",
+      "  1.67561157e-04 -9.52640116e-01]\n",
+      "~~~~~~~~~~~Iteration  10 ~~~~~~~~~~\n",
+      "took 0.015509843826293945 sec  to apply motion profile\n",
+      "\n",
+      " M \n",
+      " (244, 6)\n",
+      "H_m \n",
+      " (976, 6)\n",
+      "took 0.0024259090423583984 sec to get H\n",
+      "m_hat:  [ 3.06051612e+00 -1.43769097e+00 -1.01748924e-03 -1.84103905e-04\n",
+      "  1.13515867e-04 -9.70976710e-01]\n",
+      "~~~~~~~~~~~Iteration  11 ~~~~~~~~~~\n",
+      "took 0.016775131225585938 sec  to apply motion profile\n",
+      "\n",
+      " M \n",
+      " (247, 6)\n",
+      "H_m \n",
+      " (988, 6)\n",
+      "took 0.0024175643920898438 sec to get H\n",
+      "m_hat:  [ 3.06085992e+00 -1.24455214e+00 -6.66292559e-04 -1.49113839e-04\n",
+      "  4.78349975e-05 -9.84245420e-01]\n",
+      "~~~~~~~~~~~Iteration  12 ~~~~~~~~~~\n",
+      "took 0.017232179641723633 sec  to apply motion profile\n",
+      "\n",
+      " M \n",
+      " (248, 6)\n",
+      "H_m \n",
+      " (992, 6)\n",
+      "took 0.0024847984313964844 sec to get H\n",
+      "m_hat:  [ 3.04059863e+00 -1.12562275e+00 -3.59961618e-04 -9.15875571e-05\n",
+      "  7.93458457e-06 -9.91789997e-01]\n",
+      "~~~~~~~~~~~Iteration  13 ~~~~~~~~~~\n",
+      "took 0.01543116569519043 sec  to apply motion profile\n",
+      "\n",
+      " M \n",
+      " (251, 6)\n",
+      "H_m \n",
+      " (1004, 6)\n",
+      "took 0.00251007080078125 sec to get H\n",
+      "m_hat:  [ 3.02254105e+00 -1.06071067e+00 -1.61382050e-04 -4.83370895e-05\n",
+      "  1.29167602e-05 -9.95771885e-01]\n",
+      "~~~~~~~~~~~Iteration  14 ~~~~~~~~~~\n",
+      "took 0.017481088638305664 sec  to apply motion profile\n",
+      "\n",
+      " M \n",
+      " (253, 6)\n",
+      "H_m \n",
+      " (1012, 6)\n",
+      "took 0.0024416446685791016 sec to get H\n",
+      "m_hat:  [ 3.01029944e+00 -1.02920425e+00 -5.21043912e-05 -2.14798802e-05\n",
+      "  6.24408040e-06 -9.97847617e-01]\n",
+      "~~~~~~~~~~~Iteration  15 ~~~~~~~~~~\n",
+      "took 0.016962051391601562 sec  to apply motion profile\n",
+      "\n",
+      " M \n",
+      " (252, 6)\n",
+      "H_m \n",
+      " (1008, 6)\n",
+      "took 0.0024073123931884766 sec to get H\n",
+      "m_hat:  [ 3.00374341e+00 -1.01511872e+00 -3.42555541e-05 -1.13182932e-05\n",
+      "  3.90413834e-06 -9.98934150e-01]\n",
+      "~~~~~~~~~~~Iteration  16 ~~~~~~~~~~\n",
+      "took 0.01747298240661621 sec  to apply motion profile\n",
+      "\n",
+      " M \n",
+      " (253, 6)\n",
+      "H_m \n",
+      " (1012, 6)\n",
+      "took 0.002502918243408203 sec to get H\n",
+      "m_hat:  [ 3.00177312e+00 -1.00844347e+00 -8.00312955e-06 -3.80386382e-06\n",
+      "  4.16050170e-06 -9.99469817e-01]\n",
+      "~~~~~~~~~~~Iteration  17 ~~~~~~~~~~\n",
+      "took 0.01500391960144043 sec  to apply motion profile\n",
+      "\n",
+      " M \n",
+      " (253, 6)\n",
+      "H_m \n",
+      " (1012, 6)\n",
+      "took 0.0025365352630615234 sec to get H\n",
+      "m_hat:  [ 3.00113440e+00 -1.00461900e+00  5.51367884e-06 -3.92885340e-07\n",
+      "  1.45228705e-06 -9.99738932e-01]\n",
+      "~~~~~~~~~~~Iteration  18 ~~~~~~~~~~\n",
+      "took 0.017773151397705078 sec  to apply motion profile\n",
+      "\n",
+      " M \n",
+      " (253, 6)\n",
+      "H_m \n",
+      " (1012, 6)\n",
+      "took 0.0025262832641601562 sec to get H\n",
+      "m_hat:  [ 3.00083828e+00 -1.00227451e+00 -1.11654972e-05 -1.48305799e-06\n",
+      "  1.65476717e-06 -9.99870181e-01]\n",
+      "~~~~~~~~~~~Iteration  19 ~~~~~~~~~~\n",
+      "took 0.016903400421142578 sec  to apply motion profile\n",
+      "\n",
+      " M \n",
+      " (253, 6)\n",
+      "H_m \n",
+      " (1012, 6)\n",
+      "took 0.002658843994140625 sec to get H\n",
+      "m_hat:  [ 3.00047326e+00 -1.00100958e+00 -1.29802456e-05 -1.83926136e-06\n",
+      "  1.50989501e-06 -9.99939144e-01]\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "89bc9e631c7d4d5cab5cd46c7dc635e8",
+       "model_id": "c7f2a1bb1305422899cde17e28212844",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1295,7 +1417,7 @@
     "from linear_corrector import LC\n",
     "\n",
     "m_hat0 = np.array([0.,0, 0, 0, 0, 0]) #cold start\n",
-    "dc = LC(cloud1 = pc1, cloud2 = pc2, fid = 50, niter = 10, draw = True, m_hat0 = m_hat0,  mnp = 25, RM = False)\n",
+    "dc = LC(cloud1 = pc1, cloud2 = pc2, fid = 50, niter = 20, draw = True, m_hat0 = m_hat0,  mnp = 25, RM = False)\n",
     "ViewInteractiveWidget(dc.plt.window)"
    ]
   },
